name:           CarOde
version:        0.0
author:         Ludvig Hult
build-type:     Simple
cabal-version:  >= 1.8

library
  hs-source-dirs: lib
  build-depends:  base, hmatrix
  exposed-modules: LSODA
  ghc-options:     -Wall
  extra-lib-dirs: 
    -- path to folder containing libodepack.a that you just compiled
    "/mnt/c/Users/Ludvig/Google Drive/Hobbyprojekt 2022/LSODA/bin"

  extra-libraries: 
    odepack
    blas
    lapack
    gfortran

executable car-ode
  hs-source-dirs: examples
  build-depends:  hvega, base, CarOde, hmatrix
  main-is:        CarOde.hs