name:           LSODA
version:        0.0
author:         Ludvig Hult
build-type:     Simple
cabal-version:  >= 1.8

library
  hs-source-dirs: lib
  build-depends:  base, hmatrix
  exposed-modules: LSODA
  ghc-options:     -Wall
  extra-lib-dirs: 
    -- path to folder containing libodepack.a that you just compiled
    "/mnt/c/Users/Ludvig/Google Drive/Hobbyprojekt 2022/LSODA/bin"

  extra-libraries: 
    odepack
    blas
    lapack
    gfortran

executable car-ode
  hs-source-dirs: examples
  build-depends:  hvega, base, LSODA, hmatrix
  main-is:        CarOde.hs

executable lsoda-example
  hs-source-dirs: examples
  build-depends:  base, hmatrix, LSODA
  main-is:        LSODAEx.hs